--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "ventech-backend",
+  "name": "hogtech-backend",
   "version": "1.0.0",
-  "description": "VENTECH E-Commerce Backend API",
+  "description": "Hogtech E-Commerce Backend API",
   "main": "dist/index.js",
   "scripts": {
     "dev": "kill-port.bat && nodemon",
     "dev:clean": "kill-port.bat && nodemon",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "check-db": "ts-node src/scripts/checkDatabaseConnection.ts",
+    "apply-migration": "ts-node src/scripts/applyMigration.ts"
   },
   "keywords": [
     "ecommerce",
     "api",
-    "ventech"
+    "hogtech"
   ],
-  "author": "VENTECH",
+  "author": "Hedgehog Technologies",
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.918.0",
@@ -28,10 +30,12 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "pdfkit": "^0.15.2",
-    "resend": "^6.4.0",
+    "resend": "^6.4.2",
+    "validator": "^13.15.23",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -39,6 +43,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.5",
     "@types/pdfkit": "^0.13.9",
+    "@types/validator": "^13.15.9",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
